added basic packages to template

--- a/fancyNotes.sty
+++ b/fancyNotes.sty
@@ -6,6 +6,13 @@
 \RequirePackage[a4paper, bottom=0.9in, top=1in, marginparwidth=100pt, textwidth=400pt, inner=40pt, twoside, marginparsep=20pt]{geometry}
 \RequirePackage[utf8]{inputenc}
 \RequirePackage{etoolbox}
+\RequirePackage{pgfplots}
+\RequirePackage{graphicx}
+\RequirePackage{amsmath}
+\RequirePackage{url}
+\RequirePackage{svg}
+
+\input{includes/jtables}
 
 \renewcommand{\title}[1]{\def\TITLE{#1}}
 \renewcommand{\author}[1]{\def\AUTHOR{#1}}
