--- a/fancyNotes.sty
+++ b/fancyNotes.sty
@@ -1,7 +1,7 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{fancyNotes}[v0.1 notes style file by Jay]
+\ProvidesPackage{includes/fancyNotes}[v0.1 notes style file by Jay]
 
-\pdfmapfile{+baskervaldx/baskervaldx.map}
+%%\pdfmapfile{+includes/baskervaldx/baskervaldx.map}
 
 \RequirePackage[left]{lineno}
 \RequirePackage{fancyhdr}
@@ -16,9 +16,10 @@
 \RequirePackage{booktabs}
 
 %% Font Settings
-\RequirePackage[osf]{baskervaldx/Baskervaldx}
+\RequirePackage[osf]{includes/baskervaldx/Baskervaldx}
 \RequirePackage[baskervaldx,vvarbb]{newtxmath}
 \RequirePackage[italic,eulergreek]{mathastext}
+
 
 \input{includes/jtables}
 
