--- a/jtables.tex
+++ b/jtables.tex
@@ -1,6 +1,5 @@
 \usepackage{pgfplotstable}
     \pgfplotsset{compat=newest}
-\usepackage{xkeyval}  % better optional parameters
 
 \makeatletter
 \define@key{combineCol}{precision}[4]{\def\cbprec{#1}}
@@ -19,11 +18,32 @@
     \pgfplotstablecreatecol[
         create col/assign/.code={%
             \edef\entry{
-                \noexpand\pgfmathprintnumber[precision=\cbprec,fixed,zerofill]{\thisrow{#2}} (\noexpand\pgfmathprintnumber[precision=\cbprec,fixed,zerofill]{\thisrow{#3}})
+                \noexpand\pgfmathprintnumber[precision=\cbprec,fixed,zerofill]{\thisrow{#2}}
+                (\noexpand\pgfmathprintnumber[precision=\cbprec,fixed,zerofill]{\thisrow{#3}})
             }
             \pgfkeyslet{/pgfplots/table/create col/next content}\entry
-        }
+        },
     ]{#4}#5
+}
+
+%% #1: new column name
+%% #2: number of rows
+%% #3: value of cell
+\newcommand{\mergeCol}[3]{
+    \pgfplotstableset{
+        create on use/#1/.style={
+            column name={#1},
+            column type={string type},
+            assign cell content/.code={
+                \ifnum\pgfplotstablerow=0
+                    \pgfplotssetvalue{/pgfplots/table/@cell content}
+                        {\multirow{4}{*}{testing}}%
+                \else
+                    \pgfplotssetvalue{/pgfplots/table/@cell content}{}%
+                \fi
+            },
+        }
+    }
 }
 
 \newcommand{\readcsv}[1]{
