added tikz positioning

--- a/fancyNotes.sty
+++ b/fancyNotes.sty
@@ -19,6 +19,9 @@
 \RequirePackage{xkeyval}  % better optional parameters
 \RequirePackage{xparse}
 \RequirePackage{multirow}
+\RequirePackage{tikz}
+
+\usetikzlibrary{positioning}
 
 %% Font Settings
 \RequirePackage[osf]{includes/baskervaldx/Baskervaldx}
