--- a/fancyNotes.sty
+++ b/fancyNotes.sty
@@ -25,12 +25,11 @@
 \RequirePackage{bm}
 
 %% Font Settings
-% \RequirePackage{baskervald}
-% \RequirePackage[baskervaldx]{newtxmath}
-% \RequirePackage[italic,eulergreek]{mathastext}
-\RequirePackage{librebaskerville}
+\RequirePackage{baskervald}
+\RequirePackage[baskervaldx]{newtxmath}
+\RequirePackage[italic,eulergreek]{mathastext}
 
-% \input{includes/jtables}%
+\input{includes/jtables}%
 
 \renewcommand{\title}[1]{\def\TITLE{#1}}%
 \renewcommand{\author}[1]{\def\AUTHOR{#1}}%
