--- a/fancyNotes.sty
+++ b/fancyNotes.sty
@@ -23,6 +23,7 @@
 \RequirePackage{bm}
 \RequirePackage{ragged2e}
 \RequirePackage{sectsty}
+\RequirePackage{listings}
 
 \input{includes/jtables}%
 
