--- a/fancyNotes.sty
+++ b/fancyNotes.sty
@@ -4,7 +4,7 @@
 \RequirePackage{fancyhdr}
 \RequirePackage[
   a4paper, bottom=1.3in, top=1.3in, marginparwidth=80pt, textwidth=430pt,
-  outer=50pt, marginparsep=10pt]{geometry}
+  marginparsep=10pt]{geometry}
 \RequirePackage[utf8]{inputenc}
 \RequirePackage{etoolbox}
 \RequirePackage{pgfplots}
